[package]
name = "near-workspaces-tools"
version = "1.0.1"
edition = "2024"
authors = ["1ogon1"]
description = "Tools for working with near-workspaces"
license = "MIT"
repository = "https://github.com/1ogon1/near-workspaces-tools"
readme = "README.md"

[features]
default = []
show_logs = []
show_default_output = []

[dependencies]
serde = "1.0.228"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }
near-workspaces = { version = "0.22.1", features = ["unstable"] }
